# CoquelicotFormat

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  build.ps1  conanfile.py
gen_package/: CMakeLists.txt  build.ps1  build_macos_armv8.sh  conanfile.py  coquelicot_format.h  coquelicot_format_apis.h  coquelicot_format_base.h  coquelicot_format_decode.h  coquelicot_format_encode.h  coquelicot_format_query.h
gen_package/src/: decodehelpers.h  doc.h  encodehelpers.h  formatgen.cpp  formatgen.h  formatgen_apis.cpp  formatgen_base.cpp  formatgen_decode.cpp  formatgen_encode.cpp  formatgen_func.h  formatgen_macros.h  formatgen_query.cpp  queryhelpers.h  tinyimageformat_bits.h
include/coquelicot/: coquelicot_format.h  coquelicot_format_apis.h  coquelicot_format_base.h  coquelicot_format_decode.h  coquelicot_format_encode.h  coquelicot_format_query.h  tinyimageformat.h  tinyimageformat_apis.h  tinyimageformat_base.h  tinyimageformat_decode.h  tinyimageformat_encode.h  tinyimageformat_query.h
profiles/: android  emscripten  iphoneos  iphonesimulator_armv8  iphonesimulator_x86_64  linux_x86_64
test_package/: CMakeLists.txt  CMakeUserPresets.json  build.ps1  conanfile.py
test_package/src/: test_formatcracker.cpp  utils.h
